syntax = "proto3";

option go_package = "github.com/bal3000/BalStreamer2/api/caster";

import "google/protobuf/empty.proto";

package chromecast;

service Chromecast {
	rpc FindChromecasts (google.protobuf.Empty) returns (stream FindChromecastsResponse);
}

enum Status {
  FOUND = 0;
  LOST = 1;
}

message FindChromecastsResponse {
	string chromecastName = 1;
	Status chromecastStatus = 2;
} 